Connector and Elements z-index fix
#review-16787533 @*ankush.bansal

https://gus.lightning.force.com/lightning/r/ADM_Work__c/a07B0000005at1XIAQ/view

@rev ankush.bansal@
BLT: CLI local=false

@precheckin 16790170@

[git-p4: depot-paths = "//app/main/core/ui-interaction-builder-components/": change = 16791280]

--- a/packages/@flow-builder/ui/src/builder_platform_interaction/node/node.css
+++ b/packages/@flow-builder/ui/src/builder_platform_interaction/node/node.css
@@ -9,7 +9,7 @@
     cursor: pointer;
 }
 
-.node-container:active {
+.node-container.jtk-drag-selected, .node-container.jtk-drag.jtk-dragged {
     z-index: 400;
 }
 
